# linea-stark-prover

./: Cargo.toml  README.md
air/: Cargo.toml
air/src/: air_lookup.rs  air_permutation.rs  lib.rs
src/: air.rs  air_lookup.rs  air_permutation.rs  config.rs  main.rs  trace.rs
trace/: Cargo.toml
trace/src/: lib.rs  lookup.rs  permutation.rs  range.rs
