[package]
name = "linea-stark-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
p3-challenger = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-air = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-field = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-matrix = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-maybe-rayon = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-commit = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-dft = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-symmetric = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-uni-stark = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-bls12-377-fr = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
rand = "0.8.5"
corset = { git = "https://github.com/distributed-lab/corset.git", branch = "fix/lib"}
ark-ff = "0.5.0"
serde_json = "1.0.135"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
parallel = ["p3-maybe-rayon/parallel"]