[package]
name = "linea-stark-prover"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bin"
path = "src/main.rs"

[workspace]
resolver = "2"
members = [
    "air",
    "bin",
    "trace"
]

[workspace.dependencies]
p3-challenger = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-air = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-field = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-matrix = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-merkle-tree = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-maybe-rayon = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-commit = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-dft = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-fri = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-symmetric = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-uni-stark = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
p3-bls12-377-fr = { git = "https://github.com/distributed-lab/Plonky3/", branch = "main" }
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }
rand = "0.8.5"
ark-ff = "0.5.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
ciborium = "0.2.2"


[workspace.dependencies.config]
parallel = ["p3-maybe-rayon/parallel"]
